--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <!--The whole content below can be removed with the new code.-->
 <div style="text-align:center" class="title">
-  <h1>{{title}}</h1>
+  <h1>{{minhaUF.nome}}</h1>
+  <p>ID: {{minhaUF.id}}</p>
+  <p>ÁREA: {{minhaUF.area}}</p>
+  <p>média de municípios atendidos: {{media}}</p>
 </div>
+<ul class="final">
+<li *ngFor="let final1 of final">
+<span class="badge"><b>Quantidade de municípios atendidos:</b> {{final1.valor}}</span> <b>ano:</b> {{final1.ano}}
+</li>
