--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <!--The whole content below can be removed with the new code.-->
 <div style="text-align:center" class="title">
   <h1>{{minhaUF.nome}}</h1>
-  <p>ID: {{minhaUF.id}}</p>
-  <p>ÁREA: {{minhaUF.area}}</p>
-  <p>média de municípios atendidos: {{media}}</p>
+  <a routerLink='/resumo'>Resumo</a>
+  <a routerLink='/dadosdauf'>Dados da UF</a>
+  <a routerLink='/todososdados'>Todos os dados</a>
 </div>
-<ul class="final">
-<li *ngFor="let final1 of final">
-<span class="badge"><b>Quantidade de municípios atendidos:</b> {{final1.valor}}</span> <b>ano:</b> {{final1.ano}}
-</li>
+<router-outlet></router-outlet>
